<resources>
    <string name="app_name">Mkaratusi</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tp">List of Delears</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Register</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bill">BillActivity</string>


    <string name="title_activity_transitpass">TransitpassActivity</string>
    <string name="title_activity_transitpass_route">TransitpassRouteActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="text_printOK">Successful printing</string>
    <string name="text_printKO">Print Failed</string>
    <string name="text_printProgress">Printing in progress</string>


    <string name="text_unknown_error">Unknown Error</string>


    <string name="text_test_button">Start Test</string>

    <string name="text_Model">Model</string>
    <string name="text_Id">Id</string>
    <string name="text_tManufacturer">Manufacturer</string>
    <string name="text_BB_Version">Band Version</string>
    <string name="text_kernel_Version">kernel Version</string>
    <string name="text_Build_Number">Build Number</string>
    <string name="text_Android_Version">Android Version</string>
    <string name="text_Custom_build_version">Custom Version</string>
    <string name="text_imei">IMEI</string>
    <string name="text_mac_address">Mac Address</string>
    <string name="title_activity_product_detail">Product Details</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_inspection">InspectionActivity</string>
    <string name="action_sign_off">Sign Off</string>
    <string name="action_search">search</string>
    <string name="action_status">Status</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_chat">Chat</string>
    <string name="title_activity_inspection_report">Inspection Report</string>

</resources>
