<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Model" />

            <TextView
                android:gravity="right"
                android:id="@+id/textModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Id" />

            <TextView
                android:gravity="right"
                android:id="@+id/textId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_tManufacturer" />

            <TextView
                android:gravity="right"
                android:id="@+id/textManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_BB_Version" />

            <TextView
                android:gravity="right"
                android:id="@+id/textBBVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_kernel_Version" />

            <TextView
                android:gravity="right"
                android:id="@+id/textKernelVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Build_Number" />

            <TextView
                android:gravity="right"
                android:id="@+id/textBuildVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Android_Version" />

            <TextView
                android:gravity="right"
                android:id="@+id/textAndroidVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>


        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_Custom_build_version" />

            <TextView
                android:gravity="right"
                android:id="@+id/textCBuildVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_imei" />

            <TextView
                android:gravity="right"
                android:id="@+id/textImei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_light"/>

        <LinearLayout
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_mac_address" />

            <TextView
                android:gravity="right"
                android:id="@+id/textMacAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testClick"
            android:text="Button" />


    </LinearLayout>


</RelativeLayout>
